k8s/01-namespace.yaml
# 01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: questionnaire-namespace
