k8s/03-back.yaml
kind: Pod
apiVersion: v1
metadata:
  name: back-app
  namespace: questionnaire-namespace
  labels:
    app: back
spec:
  containers:
    - name: back-app
      image: 'questionnaire-backend:v1'
---
kind: Service
apiVersion: v1
metadata:
  name: back-service
  namespace: questionnaire-namespace
spec:
  selector:
    app: back
  ports:
    - port: 3000
