k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questionnaire-main-ingress
  namespace: questionnaire-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      {
        "Upgrade": "$http_upgrade",
        "Connection": "Upgrade",
        "Host": "$host",
        "X-Forwarded-Host": "$host"
      }
spec:
  rules:
    - host: questionnaire.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front-service
                port:
                  number: 4200
          - pathType: ImplementationSpecific
            path: "/socket.io"
            backend:
              service:
                name: back-service
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questionnaire-api-ingress
  namespace: questionnaire-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: questionnaire.local
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/api(/|$)(.*)"
            backend:
              service:
                name: back-service
                port:
                  number: 3000
